--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,41 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import Layout from "@/layouts/Layout.astro";
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const list = [
+  {
+    path: "vue",
+    label: "vue",
+  },
+  {
+    path: "react",
+    label: "react",
+  },
+  {
+    path: "svelte",
+    label: "svelte",
+  },
+  {
+    path: "solid",
+    label: "solid",
+  },
+  {
+    path: "blog",
+    label: "blog",
+  },
+];
 ---
 
 <Layout>
-	<Welcome />
+  <div class="px-2 py-4">
+    {
+      list.map(({ path, label }) => (
+        <a
+          href={path}
+          class="text-blue-500 py-2 px-4 shadow border m-2 hover:text-blue-700 hover:underline"
+        >
+          {label}
+        </a>
+      ))
+    }
+  </div>
 </Layout>
