--- a/src/layouts/MdLayout.astro
+++ b/src/layouts/MdLayout.astro
@@ -28,7 +28,7 @@ const { title } = Astro.props;
 
         let copyButton = document.createElement("button");
         copyButton.className =
-          "absolute top-0 right-0 bg-gray-900 py-1 px-3 rounded-t-sm hover:bg-gray-700 cursor-pointer -translate-y-full";
+          "absolute top-0 right-0 bg-black py-1 px-3 rounded-t-sm hover:bg-gray-700 cursor-pointer -translate-y-full text-sm";
         copyButton.innerHTML = copyButtonLabel;
 
         codeBlock.setAttribute("tabindex", "0");
@@ -56,7 +56,7 @@ const { title } = Astro.props;
 
         setTimeout(() => {
           button.innerText = copyButtonLabel;
-        }, 700);
+        }, 1000);
       }
     </script>
     <!-- 翻译为中文 -->
@@ -70,8 +70,7 @@ const { title } = Astro.props;
   <body>
     <FlexHeader>
       <main
-        class="prose m-auto max-w-8/9 md:max-w-3/5 pb-20 prose-pre:rounded-tr-none
-      dark:prose-invert"
+        class="prose m-auto max-w-8/9 md:max-w-3/5 pb-20 prose-pre:rounded-tr-none dark:prose-invert"
       >
         <h1 class="mt-4">{title}</h1>
         <slot />
