--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,2 +1,10 @@
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
+
+@font-face {
+  font-family: digital;
+  src: url("/fonts/Digital-7MonoItalic.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
